profilelist1exp/unpackaged/objects/Batch_Scope_Query__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Size__c</fullName>
        <label>Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_to_update__c</fullName>
        <label>Field to update</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True is need to data load the object</description>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Helper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Helper?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_value__c</fullName>
        <label>New value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query__c</fullName>
        <description>The SOQL that used to query records to be processed in batch job. SOQL reserved characters should be escaped</description>
        <label>Query</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Skip_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skip Trigger?</label>
        <type>Checkbox</type>
    </fields>
    <label>Batch Scope Query</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Batch Scope Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>